--- a/www/templates/settingSerie.html
+++ b/www/templates/settingSerie.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Setting serie">
 	<ion-content>
 	
-		<form ng-submit="addSerie()">
+		<form ng-submit="addSerie(serie.group)">
 			<!--
 				<label class="item item-input">
 				  <span class="input-label">Date</span>
@@ -35,11 +35,11 @@
   				</div>
   			</div>
 
-  			<p>Alert every :</p>
+  			<p>Alert every {{ serie.group }}:</p>
   			<div class="row" ng-repeat="alertTime in alertTimes">
 
 			  <label class="item item-radio col">
-			    <input type="radio" name="group">
+			    <input type="radio" ng-model="serie.group" ng-value="alertTime">
 			    <div class="item-content">
 			      {{ alertTime }}
 			    </div>
@@ -49,7 +49,7 @@
 
 			</div>
 			<div class="padding">
-				
+				<button class="button button-block button-positive">Add</button>
 			</div>
 		</form>
 	</ion-content>
