--- a/www/templates/settingSerie.html
+++ b/www/templates/settingSerie.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Setting serie">
 	<ion-content>
 	
-		<form ng-submit="addSerie(serie, datepickerObject, timePickerObject)">
+		<form ng-submit="addSerie(serie, datepickerObject, timePickerObject, geolocation)" name="formSerie" novalidate>
 			<!--
 				<label class="item item-input">
 				  <span class="input-label">Date</span>
@@ -14,38 +14,92 @@
 			
 			{{ serie }}
 			-->
-			<img ng-show="imgURI !== undefined" ng-src="{{serie.imgURI}} ">
-		    <img ng-show="imgURI === undefined" ng-src="http://placehold.it/300x300">
-		    <button class="button button-positive" ng-click="takePicture()">Take Picture</button>
+
+			<!--<div class="item item-thumbnail-left item-text-wrap">
+				<img ng-show="serie.poster_path !== undefined" ng-src="http://image.tmdb.org/t/p/w300/{{ serie.poster_path }} ">
+			    <img class="full-image" ng-show="(serie.poster_path === undefined) && serie.backdrop_path !== undefined" ng-src="http://image.tmdb.org/t/p/w300/{{ serie.backdrop_path }}">
+			      
+		     	
+		     	 <div class="item item-body">
+			    <h1>{{ serie.original_name }}</h1>
+			   	<p>{{ serie.overview }}</p>
+			    <p >
+			    	genre : <span ng-repeat="genre in serie.genres"> {{ genre.name }} </span>
+			    </p>
+			</div>
+			    <button class="button button-positive" ng-click="takePicture()">
+			    	Take Picture
+				</button>
+				<button class="button button-positive" ng-click="choosePicture()">
+			    	Choose Picture
+				</button>
+		    </div>-->
+
+			<div class="row">
+				<div class="col col-25">
+					<img class="responsive-image" style="width: 100% !important; height: auto !important;" ng-show="serie.poster_path !== undefined && serie.imgURI === undefined" ng-src="http://image.tmdb.org/t/p/w300/{{ serie.poster_path }} ">
+					<img class="responsive-image" style="width: 100% !important; height: auto !important;" ng-show="(serie.poster_path === undefined) && serie.backdrop_path !== undefined && serie.imgURI === undefined" ng-src="http://image.tmdb.org/t/p/w300/{{ serie.backdrop_path }}">
+					
+			    	<img class="responsive-image" style="width: 100% !important; height: auto !important;" ng-show="serie.imgURI !== undefined" ng-src="{{ serie.imgURI }}">
+
+			   		<button class="button button-positive ion-camera" ng-click="takePicture()">	    	
+					</button>
+
+					<button class="button button-positive ion-image" ng-click="choosePicture()">	    	
+					</button>
+				</div>
+
+			  	<div class="col">
+			  	    <h1>{{ serie.original_name }}</h1>
+				   	<p>{{ serie.overview | limitTo : 200 }} ...</p>
+				    <p >
+				    	genre<span ng-show="serie.genres.length > 1">s</span> : <span ng-repeat="genre in serie.genres"> {{ genre.name }} </span>
+				    </p>
+				</div>
+			</div>
 
 			<p>Start Episode :</p>
 			<div class="row">
 				<div class="col">
 					<label class="item item-input">
 					  <span class="input-label">Season</span>
-					  <input type="number" max="{{serie.number_of_seasons}}" min="1" value="1">
+					  <input type="number" name="season" max="{{serie.number_of_seasons}}" ng-model="serie.season" min="1" value="1" >
 					</label>
+					<span class="assertive" ng-show="formSerie.season.$error.integer">
+						The value is not a valid integer!
+					</span>
+					<span class="assertive" ng-show="formSerie.season.$error.min || formSerie.season.$error.max">
+					      The value must be in range 1 to {{ serie.number_of_seasons }}!
+					</span>
 				</div>
 				<div class="col">
 					<label class="item item-input">
 						<span class="input-label">Episode</span>
-						<input type="number" max="{{serie.seasons[0].episode_count}}" min="1" value="1">
+						<input type="number" min="0" name="episode" max="{{ serie.seasons[0].episode_count }}" ng-model="serie.episode" ng-value="0" >
 					</label>
+					<span class="assertive" ng-show="formSerie.episode.$error.integer">
+						The value is not a valid integer!
+					</span>
+					<span class="assertive" ng-show="formSerie.episode.$error.min || formSerie.episode.$error.max">
+					    The value must be in range 0 to {{ serie.seasons[0].episode_count }}!
+					</span>
 				</div>
 			</div>
 
-			<p>Notification At : </p>
-			<ul class="list" ng-repeat="(key,val) in geolocalisations">
-
-			  <li class="item item-toggle">
-			     {{ key }}
+			<p>Notification At {{ Object.keys(geolocation).length }}: </p>
+			<ul class="list padding">
+			  <li class="item item-toggle" ng-repeat="(key,val) in geolocalisations">
+			  	{{ key }}
 			     <label class="toggle toggle-positive">
-			       <input type="checkbox">
+			       <input type="checkbox" name="notification_at" required ng-model="geolocation[key]" value="val">
 			       <div class="track">
 			         <div class="handle"></div>
 			       </div>
 			     </label>
 			  </li>
+				<span ng-show="geolocation | isEmpty" class="energized">
+					Choose at least one location
+				</span>
 			</ul>
 
 			<p>Start date :</p>
@@ -67,18 +121,20 @@
 
   			<p>Alert every :</p>
   			<div class="row" ng-repeat="alertTime in alertTimes">
-
 			  <label class="item item-radio col">
-			    <input type="radio" ng-model="serie.group" ng-value="alertTime">
+			    <input type="radio" ng-model="serie.group" ng-value="alertTime" ng-required="!serie.group">
 			    <div class="item-content">
 			      {{ alertTime }}
 			    </div>
 			    <i class="radio-icon ion-checkmark"></i>
 			  </label>
 			</div>
+			<span ng-hide="serie.group" class="energized">
+				Choose an alert!
+			</span>
 
 			<div class="padding">
-				<button class="button button-block button-positive">Add</button>
+				<button class="button button-block button-positive" ng-disabled="formSerie.$invalid">Add</button>
 			</div>
 		</form>
 	</ion-content>
